@@ -1,5 +1,7 @@
 This is a list of changes in pygame's history.
 
+Nov 15, 2000
+	Surface.set_clip() fixed when passing no args [BUG]
 
 Nov 15, 2000
 	time.set_timer() now handles multiple timers
